--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "prisma": "^5.15.0",
+    "prisma": "^5.15.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
   },
   "dependencies": {
     "@prisma/client": "^5.15.1",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "helmet": "^7.1.0",
+    "zod": "^3.23.8"
   }
 }
