--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "dependencies": {
     "@prisma/client": "^5.15.1",
     "express": "^4.19.2",
+    "express-async-errors": "^3.1.1",
+    "reflect-metadata": "^0.2.2",
+    "tsyringe": "^4.8.0",
     "zod": "^3.23.8"
   }
 }
