--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --verbose --runInBand",
+    "migrate:test": "dotenv -e .env.test --npx prisma migrate dev",
+    "prismastudio:test":"dotenv -e .env.test --npx prisma studio",
+    "test": "dotenv -e .env.test --jest --verbose --runInBand",
     "dev": "tsnd --respawn src/server.ts"
   },
   "keywords": [],
@@ -17,9 +19,11 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
     "prisma": "^5.16.0",
-    "ts-jest": "^29.2.0",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.4",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5"
   },
