--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "migrate:test": "dotenv -e .env.test --npx prisma migrate dev",
-    "prismastudio:test": "dotenv -e .env.test --npx prisma studio",
+    "migrate:test": "dotenv -e .env.test -- npx prisma migrate dev",
+    "prismastudio:test": "dotenv -e .env.test -- npx prisma studio",
     "test": "dotenv -e .env.test -- jest --verbose --runInBand",
-    "script":"dotenv -e .env.test -- npx ts-node test.ts",
+    "script": "dotenv -e .env.test -- npx ts-node test.ts",
     "dev": "tsnd --respawn src/server.ts",
     "dev:test": "dotenv -e .env.test -- tsnd --respawn src/server.ts"
+    
   },
   "keywords": [],
   "author": "",
@@ -23,13 +24,16 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/node": "^22.1.0",
     "@types/supertest": "^6.0.2",
+    "@types/xml2js": "^0.4.14",
     "jest": "^29.7.0",
     "prisma": "^5.16.0",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.4",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "xml2js": "^0.6.2"
   },
   "dependencies": {
     "@prisma/client": "^5.15.1",
