--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "migrate:test": "dotenv -e .env.test --npx prisma migrate dev",
+    "migrate:test": "dotenv -e .env.test -- npx prisma migrate dev",
     "prismastudio:test": "dotenv -e .env.test --npx prisma studio",
     "test": "dotenv -e .env.test -- jest --verbose --runInBand",
-    "script":"dotenv -e .env.test -- npx ts-node test.ts",
+    "script": "dotenv -e .env.test -- npx ts-node test.ts",
     "dev": "tsnd --respawn src/server.ts",
     "dev:test": "dotenv -e .env.test -- tsnd --respawn src/server.ts"
   },
@@ -40,6 +40,9 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
+    "faker": "^5.5.3",
+    "faker-br": "^0.4.1",
+    "gerar-cpf": "^3.1.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "reflect-metadata": "^0.2.2",
