add build script

--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "migrate:test": "dotenv -e .env.test -- npx prisma migrate dev",
+    "start": "node dist/src/server.js",
+    "build":"npx tsc",
     "prismastudio:test": "dotenv -e .env.test -- npx prisma studio",
     "test": "dotenv -e .env.test -- jest --verbose --runInBand",
     "script": "dotenv -e .env.test -- npx ts-node test.ts",
     "dev": "tsnd --respawn src/server.ts",
+    "migrate:test": "dotenv -e .env.test -- npx prisma migrate dev",
+    "migrate:deploy" : "npx prisma migrate deploy",
     "dev:test": "dotenv -e .env.test -- tsnd --respawn src/server.ts"
   },
   "keywords": [],
