--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/src/server.js",
+    "start": "node dist/server.js",
     "build":"npx tsc",
     "prismastudio:test": "dotenv -e .env.test -- npx prisma studio",
     "test": "dotenv -e .env.test -- jest --verbose --runInBand",
